--- a/vogel-krypt/skript.latex
+++ b/vogel-krypt/skript.latex
@@ -271,7 +271,7 @@
     \texttt{<joerg@alea.gnuu.de>}} (2006/07)
    \item \href{mailto:jens@kubieziel.de}{Jens Kubieziel
     \texttt{<jens@kubieziel.de>}} (2006)
-   \item Michael Preis (2006)
+   \item Michael Preiss (2006)
    \item Christine List (2007)
   \end{itemize}
 \end{itshape}
@@ -1361,7 +1361,7 @@ d.\,h. wir arbeiten mit Teilmengen von $\Z_{2}^{*}$.
 \end{defini}
 
 Damit eine Entschlüsselung des Textes möglich ist, muss die Verschlüsselung
-bijektiv seien und da sie von $\Z_{2}^{n}$ auf $\Z_{2}^{n}$ abbildet, ist sie
+bijektiv sein und da sie von $\Z_{2}^{n}$ auf $\Z_{2}^{n}$ abbildet, ist sie
 eine Permutation der $2^{n}$ möglichen Blöcke. Es gibt also $2^{n}!$
 mögliche Funktionen zur Verschlüsselung.
 
@@ -1561,7 +1561,7 @@ $[a]_{k} \cdot [b]_{k} = [1]_{k}$. In diesem Fall heißt $[b]_{k}$
 \end{lemma}
 
 Für das Produkt zweier Zahlen~$p$ und $q$, die zueinander teilerfremd sind,
-ist $\phi(p\cdot q)=\phi(p)\cdot\phi(q)$ --~$\phi$ ist multiplikativ.
+ist $\phi(p\cdot q)=\phi(p)\cdot\phi(q)$ --~$\phi$ multiplikativ.
 Falls $k=p$ eine Primzahl ist, dann ist $\phi(p)=p-1$. Es gibt als
 $\phi(p)=p-1$ Einheiten in $\Z_{p}$, womit $\Z_{p}$ ein Körper ist.
 \begin{gather*}
@@ -1573,7 +1573,7 @@ Die algebraische Struktur $\Z_{k} = [\Z_{k},+,\cdot]$ mit dem
 Nullelement~$[0]_{k}$ und dem Einselement~$[1]_{k}$ bezeichnet mal als
 \highl{kommutativen Ring}.
 
-In der Krypologie wird häufig mit dem Restklassenring modulo~$26$ gearbeitet:
+In der Kryptologie wird häufig mit dem Restklassenring modulo~$26$ gearbeitet:
 $\Z_{26} = \{0,1,\dotsc,25\}$. Im Grunde sind alle endlichen Alphabete
 kommutative Ringe, was den Vorteil hat, dass man mit Buchstaben rechnen kann.
 Dies haben wir bereits bei der Caesar-Chiffre ausgenutzt.
