--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -59,6 +59,8 @@
 \usepackage[all,warning]{onlyamsmath}
 \usepackage[l2tabu]{nag}
 \usepackage{fixmath}
+\usepackage{pstricks}
+\usepackage{pst-plot}
 
 
 
@@ -656,7 +658,7 @@ Eine kurze Wiederholung aus Abschnitt\,7.2
       &= \int_{t_{j-1}}^{t_{j}} \underbrace{\sum_{k=1}^{n} \frac{\partial u}{\partial
          x_{k}}\big(\phi(t)\big)\cdot\dot{\phi}(t)\,dt}
          _{\frac{d}{dt}\big(u(\phi(t))\big) \text{ Kettenregel}} &&v_{k}=\frac{\partial
-         u}{\partial x_{k}} \text{ nach Voraussetzung}\\
+         u}{\partial x_{k}} \text{ Voraussetzung}\\
       &= u(\phi(t))\big|_{t_{j-1}}^{t_{j}} = u(\phi(t_{j}))
          -u(\phi(t_{j-1}))\\
       \int_{\Gamma} \vec{v}\vec{dx} &= \sum_{j=1}^{N} \int_{\Gamma_{j}}
@@ -989,7 +991,7 @@ Die Umkehrung von \autoref{lem:8.1.2/11} gilt im allgemeinen \textit{nicht}.
 \subsection{Die Greensche Formel im \texorpdfstring{$\R^2$}{R2}}
 \label{sec:8.2.1}
 
-Das Ziel ist, einen Zusammenhang zwischen dem Flächenintegral und dem
+Das Ziel dieses Abschnittes ist es, einen Zusammenhang zwischen dem Flächenintegral und dem
 Kurvenintegral herzustellen:\\
 Sei $B\subset\Omega\subset\R^2, \Omega$ offen, $B$ kompakt, $\vec{v}\colon
 \Omega\rightarrow \R^2$ ein $C^1$-Vektorfeld:
@@ -1050,6 +1052,35 @@ Sei $B\subset\Omega\subset\R^2, \Omega$ offen, $B$ kompakt, $\vec{v}\colon
     \end{align*}
   \end{proof}
 \end{folger}
+
+\begin{pspicture}(0,0)(5,4)
+  \psaxes[axesstyle=axes,labels=none,showorigin=false,ticks=x,dx=1.5]{->}(4,3)
+  \psbezier{->}(1.5,1)(1.7,.7)(2,1.1)(2.5,0.9)
+  \psbezier(2.5,0.9)(2.7,1.0)(2.9,1.3)(3,1.0)
+  \psline{->}(3,1)(3,1.6)
+  \psline(3,1.6)(3,2.2)
+  \psbezier{->}(3,2.2)(2.9,2.4)(2.7,2.3)(2.5,2.2)
+  \psbezier(2.5,2.2)(2,2)(1.7,1.8)(1.5,2)
+  \psline{->}(1.5,2)(1.5,1.5)
+  \psline(1.5,1.5)(1.5,1)
+
+  \psline[linestyle=dotted](1.5,0)(1.5,1)
+  \psline[linestyle=dotted](1.5,2)(1.5,3)
+  \psline[linestyle=dotted](3,0)(3,1)
+  \psline[linestyle=dotted](3,2.2)(3,3)
+
+  \rput[B](1.5,-.5){$a$}
+  \rput[B](3,-.5){$b$}
+  \rput[B](4,-.5){$x_{1}$}
+  \rput[B](-.3,2.7){$x_{2}$}
+
+  \rput[B](2.5,.5){$\Gamma_{1}$}
+  \rput[B](3.5,1.5){$\Gamma_{2}$}
+  \rput[B](2.5,2.5){$\Gamma_{3}$}
+  \rput[B](1,1.5){$\Gamma_{4}$}
+
+  \rput[B](2.3,1.4){$B$}
+\end{pspicture}
 
 \todo{Skizze mit Normalbereich einfügen} \help{Wie sah die nochmal aus?}
 
@@ -3238,6 +3269,7 @@ Gesucht ist $u(x,t)$.
 
 \begin{satz}[Allgemeine Lösung der homogenen Wellengleichung, Formel
   von d'Alembert]
+%  \todo{Bezeichnung besser umbrechen}
   \label{satz:921-1}
   Es sei $I\subset\R$ ein Intervall, $u\colon\R\times I\rightarrow \C,
   u\in C^{2}(\R\times I)$. $u$ ist genau dann eine Lösung von $u_{tt}-
