- Beweis zum Satz 8.1.1/5
git-svn-id: https://svn.lug-jena.de/uni-skripte@689 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -557,16 +557,36 @@ wir einige wichtige Operationen im Zusammenhang mit Vektorfeldern.
   \end{enumerate}
 
   \begin{proof}
-    (4) und (5) \todo{ergänzen aus Übung 29/1}, zu (3):
-    \begin{align*}
-      \Div(f\vec{H}) &= \partial_{1}(f H_{1}) + \partial_{2}(f H_{2}) +
-         \partial_{3}(f H_{3})\\
-      &= f(\partial_{1}H_{1} + \partial_{2}H_{2}+\partial_{3}H_{3}) +
-         (\partial_{1}f) H_{1} + (\partial_{2}f)H_{2} +
-         (\partial_{3}f)H_{3} &\text{mit Produktregel}\\
-      &= f\Div \vec{H} + (\grad f)\cdot \vec{H}
-    \end{align*}
-    Den Beweis zu (2) kann man analog zu (3) führen.
+    \begin{enumerate}
+     \item klar
+     \item siehe (3)
+     \item Es gilt:
+      \begin{align*}
+	\Div(f\vec{H}) &= \partial_{1}(f H_{1}) + \partial_{2}(f H_{2}) +
+	   \partial_{3}(f H_{3})\\
+	&= f(\partial_{1}H_{1} + \partial_{2}H_{2}+\partial_{3}H_{3}) +
+	   (\partial_{1}f) H_{1} + (\partial_{2}f)H_{2} +
+	   (\partial_{3}f)H_{3} &\text{mit Produktregel}\\
+	&= f\Div \vec{H} + (\grad f)\cdot \vec{H}
+      \end{align*}
+     \item Das Produkt der Vektorfelder $\vec{H}$ und $\vec{K}$ ist:
+      \begin{align*}
+	\vec{H}\times\vec{K} &= \begin{pmatrix}H_{2}K_{3}- H_{3}K_{2}\\
+				  H_{3}K_{1}-H_{1}K_{3}\\
+				  H_{1}K_{2}-H_{2}K_{1}\end{pmatrix}\\
+	\Rightarrow \Div (\vec{H}\times\vec{K}) &= \Div \Big(
+	   \begin{pmatrix}H_{2}K_{3}- H_{3}K_{2}\\
+	     H_{3}K_{1}-H_{1}K_{3}\\
+	     H_{1}K_{2}-H_{2}K_{1}\end{pmatrix}\Big)\\
+	&= \partial_{1} (H_{2}K_{3}- H_{3}K_{2}) + \partial_{2}
+	   (H_{3}K_{1}-H_{1}K_{3}) + \partial_{3} (H_{1}K_{2}-H_{2}K_{1})\\
+	&= K_{3}\partial_{1}H_{2}+H_{2}\partial_{1}K_{3} -
+	   K_{2}\partial_{1}H_{3}+H_{3}\partial_{1}K_{2}+\dotsb+
+	   K_{2}\partial_{3}H_{1}+H_{1}\partial_{3}K_{2} -
+	   K_{1}\partial_{3}H_{2}+H_{2}\partial_{3}K_{1}\\
+	&=(\rot\vec{H})\cdot\vec{K} - \vec{H}\cdot(\rot\vec{K})
+      \end{align*}
+    \end{enumerate}
   \end{proof}
 \end{satz}
 
