--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -613,22 +613,21 @@ Eine kurze Wiederholung aus Abschnitt\,7.2
 \end{itemize}
 
 \begin{figure}
-  \begin{center}
-    \begin{pspicture}(0,0)(3,3)
-      \psbezier(0,1)(1,2.4)(2,.1)(3,1.9)
-      \psdot(0,1)
-      \psdot(3,1.9)
-      \rput[B](0,.7){$\varphi(a)$}
-      \rput[B](3,2.2){$\varphi(b)$}
-      \psline[arrows=->](0,1.26)(1,1.6)
-      \psline[linestyle=dotted](0,1.26)(2,1.9)
-      \psdot(.5,1.45)
-      \rput[B](.5,1.7){$\dot{\varphi}(t)$}
-      \psline(2.2,1.2)(2.4,1)
-      \rput[B](2.6,.7){$\Gamma$}
-    \end{pspicture}
-    \caption{Glatte Jordankurve}
-  \end{center}
+  \centering
+  \begin{pspicture}(0,0)(3,3)
+    \psbezier(0,1)(1,2.4)(2,.1)(3,1.9)
+    \psdot(0,1)
+    \psdot(3,1.9)
+    \rput[B](0,.7){$\varphi(a)$}
+    \rput[B](3,2.2){$\varphi(b)$}
+    \psline[arrows=->](0,1.26)(1,1.6)
+    \psline[linestyle=dotted](0,1.26)(2,1.9)
+    \psdot(.5,1.45)
+    \rput[B](.5,1.7){$\dot{\varphi}(t)$}
+    \psline(2.2,1.2)(2.4,1)
+    \rput[B](2.6,.7){$\Gamma$}
+  \end{pspicture}
+  \caption{Glatte Jordankurve}
 \end{figure}
 
 \begin{defini}
@@ -657,25 +656,24 @@ Eine kurze Wiederholung aus Abschnitt\,7.2
   zugeordnet. $[x^{0} x^{1}\ldots x^{n}]$. Dies ist ein Beispiel für
   eine stückweise stetige Kurve.
   \begin{figure}
-    \begin{center}
-      \begin{pspicture}(0,0)(6,4)
-	\psline[arrows=->](0,3)(2,3)
-	\psline(2,3)(3,3)
-	\psline[arrows=->](3,3)(4,3.5)
-	\psline(4,3.5)(5,4)
-	\psline[arrows=->](5,4)(5.5,3)
-	\psline(5.5,3)(6,2)
-	\psline[arrows=->](6,2)(5,1)
-	\psline(5,1)(4,0)
-	\psdots(0,3)(3,3)(5,4)(6,2)(4,0)
-	\rput[B](0,2.5){$x^{0}$}
-	\rput[B](3,2.5){$x^{1}$}
-	\rput[B](4.8,3.5){$x^{2}$}
-	\rput[B](6,1.5){$x^{3}$}
-	\rput[B](3.8,0){$x^{4}$}
-      \end{pspicture}
-      \caption{Polygonzug}
-    \end{center}
+    \centering
+    \begin{pspicture}(0,0)(6,4)
+      \psline[arrows=->](0,3)(2,3)
+      \psline(2,3)(3,3)
+      \psline[arrows=->](3,3)(4,3.5)
+      \psline(4,3.5)(5,4)
+      \psline[arrows=->](5,4)(5.5,3)
+      \psline(5.5,3)(6,2)
+      \psline[arrows=->](6,2)(5,1)
+      \psline(5,1)(4,0)
+      \psdots(0,3)(3,3)(5,4)(6,2)(4,0)
+      \rput[B](0,2.5){$x^{0}$}
+      \rput[B](3,2.5){$x^{1}$}
+      \rput[B](4.8,3.5){$x^{2}$}
+      \rput[B](6,1.5){$x^{3}$}
+      \rput[B](3.8,0){$x^{4}$}
+    \end{pspicture}
+    \caption{Polygonzug}
   \end{figure}
 \end{bsp}
 
