--- a/schmeisser-ana3/skript.latex
+++ b/schmeisser-ana3/skript.latex
@@ -1664,12 +1664,12 @@ schreiben:
 
 \begin{bemerk}
   \begin{enumerate}
-   \item Der Satz \todo{link}\help{welcher?} gilt für alle $n\geq 2$
+   \item Der \autoref{satz:gauss} gilt für alle $n\geq 2$
     und für allgemeine Bereiche $B$!
    \item Als einen \emph{zulässigen Bereich} bezeichnen wir einen
     Bereich, für den der Gauß'sche Satz (\autoref{satz:gauss}) gilt
    \item Für $\vec{v} = \begin{bmatrix}0\\0\\x_{3}\end{bmatrix}$ ist
-    $\Div \vec{v} = 1$ und der Satz\todo{link}\help{welcher?} liefert
+    $\Div \vec{v} = 1$ und es folgt:
     \begin{gather*}
       \underbrace{\int_{B}dx}_{=\mu(B)} = \int_{\partial B} x_{3}\cdot
          n_{3}\,dS = \frac{1}{3} \int_{\partial B} x\cdot\vec{n}\,dS
@@ -1853,6 +1853,8 @@ Folgerungen daraus:
                                 \ldots \frac{1}{2}&:n \text{ ungerade}
                               \end{cases}
   \end{gather*}
+  Dabei ist $\Gamma(x)=\int_{0}^{\infty} t^{x-1} e^{-t}\,dt$ für $x>0$
+  die \emph{Gammafunktion}. Es gilt $\Gamma(x+1)=\Gamma(x)\cdot x$.
 
   \begin{proof}
     Aus Analysis 2 wissen wir bereits
